feat: mq use in distribute 1.mq